crates/swc-react-native-hermes-v1-fixes/src/visitors/snapshots/swc_react_native_hermes_v1_fixes__visitors__class_in_finally__tests__class_declaration_wraps_legacy_class_binding.snap
---
source: crates/swc-react-native-hermes-v1-fixes/src/visitors/class_in_finally.rs
expression: out
---
try {
    work();
} finally{
    var Foo = (()=>{
        class Foo extends Base {
            value() {
                return 1;
            }
        }
        return Foo;
    })();
    use(Foo);
}
