crates/swc-react-native-hermes-v1-fixes/src/visitors/snapshots/swc_react_native_hermes_v1_fixes__visitors__class_in_finally__tests__class_expression_wraps_expression_site.snap
---
source: crates/swc-react-native-hermes-v1-fixes/src/visitors/class_in_finally.rs
expression: out
---
try {
    work();
} finally{
    const Foo = (()=>class {
            value() {
                return 1;
            }
        })();
    use((()=>class Bar {
        })());
}
