crates/swc-react-native-hermes-v1-fixes/src/visitors/snapshots/swc_react_native_hermes_v1_fixes__visitors__class_in_finally__tests__class_in_function_inside_finally_is_left_alone.snap
---
source: crates/swc-react-native-hermes-v1-fixes/src/visitors/class_in_finally.rs
expression: out
---
try {
    work();
} finally{
    function nested() {
        class Inner {
        }
        return Inner;
    }
}
