crates/swc-react-native-hermes-v1-fixes/src/visitors/snapshots/swc_react_native_hermes_v1_fixes__visitors__class_in_finally__tests__function_local_finally_is_still_visited.snap
---
source: crates/swc-react-native-hermes-v1-fixes/src/visitors/class_in_finally.rs
expression: out
---
function nested() {
    try {
        work();
    } finally{
        var Inner = (()=>{
            class Inner {
            }
            return Inner;
        })();
        return Inner;
    }
}
